# KIOU-Hook

./: .commitlintrc.yaml  .gitignore  KIOUHook.h  KIOUHook.m  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
Account/: Persistence.h  Persistence.m
Hook/: AccountObserve.m  AfkDisable.m  AiSpecialSupport.m  AssistEnable.m  AssistTune.m  Collection.m  Common.h  Common.m  FriendUnhide.m  FriendUnhideBridge.h  FriendUnhideBridge.m  FriendUnhideBridgeUI.m  FriendUnhideBridge_Private.h  GrpcLogging.m  MatchingPlayer.m  PremiumUnlock.m  SelectCharacter.m  SyncItemList.m  Version.m  VoiceUnlock.m
recipes/: __init__.py  common.py  v1_0_1.py  v1_0_2.py
tools/: check_recipes.py
