[project]
name = "kiou-hook"
version = "0.1.0"
description = "Shared KIOU binary catalog + reusable Objective-C account/gRPC hooks. Consumed as a submodule by IPA-Patch tweaks."
requires-python = ">=3.10"
authors = [{ name = "IPA-Patch contributors" }]

[tool.setuptools.packages.find]
include = ["recipes*", "tools*"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter. Configured to be strict but not disruptive to
# the recipe/tool files' idiomatic style (tuple SITES rows, hex constants).
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["__pycache__"]

[tool.ruff.lint]
# Sensible default rule pack: pycodestyle errors, pyflakes, isort,
# pyupgrade, bugbear. Add bandit-lite (S) for tools/ scripts.
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# Keep the tuple layout in SITES tables readable — E501 (line-too-long)
# for aligned rows is intentional, not a defect.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# recipes/common.py builds cave payloads with terse variable names that
# mirror ARM64 assembly mnemonics — RUF012 / naming isn't useful there.
"recipes/common.py" = ["RUF012"]

# ---------------------------------------------------------------------------
# Pyright — typechecker. `tools.encode` is provided by the consuming
# tweak's Kanade submodule at runtime; it's not vendored here. Treat
# missing imports as a warning, not an error, so CI runs green without
# pulling Kanade into this repo just for the sake of typechecking.
# ---------------------------------------------------------------------------
[tool.pyright]
include = ["recipes", "tools"]
exclude = ["**/__pycache__"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
